
[project]
name = "PwnUtils"
version = "0.1.0"
description = "A collection of useful pwn scripts in one"
authors = [
    {name = "Meul Nova", email = "n@ova.moe"},
]
dependencies = [
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
